micro-service-docker/product-service/envoy.yml
static_resources:
  listeners:
    - name: listener_9009
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9009
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/var/log/envoy/access.log"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: product_service
                            timeout: 10s
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: product_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: product_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: product-service
                      port_value: 9009

rate_limits:
  domain: product_service
  descriptors:
    - key: remote_address
      value: "*"
      rate_limit:
        unit: second
        requests_per_unit: 10 # 10 requests/second per IP

circuit_breakers:
  thresholds:
    - priority: DEFAULT
      max_connections: 100
      max_pending_requests: 100
      max_requests: 500
      max_retries: 3
